# dp4job

./: .gitignore  LLM.py  README.md  api_test.ipynb  client_test.ipynb  download_model.sh  main.ipynb  main.py  make_datebase.py  pyproject.toml  rag_client.py  run_me.sh  test.ipynb  test_api.ipynb  test_client.ipynb  test_rag.py  tesy.py  vllm_apiserver.py  vllm_client.py  vllm_offline.py  vllm_server_api.py  vllm_webui.py  vllm_wrapper.py  web_demo.py
data_base/vector_db/chroma/754c5852-a23a-47e8-ac8b-95606e3c202c/: index_metadata.pickle
finetune/: README.md  custom_datasets.json  lora_merge.py  make_datasets.py
mcp_tools/: mcp_client.py  mcp_server.py  rag_client.py
test/: chroma.sqlite3
txt/: chunk_1.txt  chunk_10.txt  chunk_100.txt  chunk_101.txt  chunk_102.txt  chunk_103.txt  chunk_104.txt  chunk_105.txt  chunk_106.txt  chunk_107.txt  chunk_108.txt  chunk_109.txt  chunk_11.txt  chunk_110.txt  chunk_111.txt  chunk_112.txt  chunk_113.txt  chunk_114.txt  chunk_115.txt  chunk_116.txt  chunk_117.txt  chunk_118.txt  chunk_119.txt  chunk_12.txt  chunk_120.txt  chunk_121.txt  chunk_122.txt  chunk_123.txt  chunk_124.txt  chunk_125.txt  chunk_126.txt  chunk_127.txt  chunk_13.txt  chunk_14.txt  chunk_15.txt  chunk_16.txt  chunk_17.txt  chunk_18.txt  chunk_19.txt  chunk_2.txt  (+8 more)
