[project]
name = "dp4job"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.10",
    "flagembedding>=1.3.4",
    "gradio>=5.31.0",
    "huggingface>=0.0.1",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.24",
    "langchain-huggingface>=0.2.0",
    "langchain-openai>=0.3.18",
    "matplotlib>=3.10.3",
    "mcp>=1.9.2",
    "modelscope>=1.26.0",
    "openai>=1.82.0",
    "pillow>=11.2.1",
    "some-package>=0.1",
    "torch>=2.7.0",
    "transformers>=4.52.3",
]
